--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   "main": "index.js",
   "dependencies": {
     "11": "^0.0.1",
-    "oba-api": "github:rijkvanzanten/node-oba-api"
+    "axios": "^0.18.0",
+    "chalk": "^2.4.1",
+    "dotenv": "^6.1.0",
+    "express": "^4.16.4",
+    "jsonpath": "^1.0.0",
+    "oba-api": "github:rijkvanzanten/node-oba-api",
+    "query-string": "^6.2.0",
+    "xml-to-json-promise": "0.0.3"
   },
   "devDependencies": {},
   "scripts": {
