--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "chalk": "^2.4.1",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "fs": "0.0.1-security",
     "jsonpath": "^1.0.0",
     "oba-api": "github:rijkvanzanten/node-oba-api",
     "query-string": "^6.2.0",
