--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.16.4",
     "fs": "0.0.1-security",
     "jsonpath": "^1.0.0",
+    "node-oba-api-wrapper": "github:maanlamp/node-oba-api-wrapper",
     "oba-api": "github:rijkvanzanten/node-oba-api",
     "query-string": "^6.2.0",
     "xml-to-json-promise": "0.0.3"
